--- a/modules/apm/build.gradle
+++ b/modules/apm/build.gradle
@@ -14,11 +14,19 @@ esplugin {
 
 def otelVersion = '1.17.0'
 
+repositories {
+  maven {
+    name "sonatype-nexus-snapshots"
+    url "https://oss.sonatype.org/content/repositories/snapshots"
+  }
+}
 dependencies {
   implementation "io.opentelemetry:opentelemetry-api:${otelVersion}"
   implementation "io.opentelemetry:opentelemetry-context:${otelVersion}"
   implementation "io.opentelemetry:opentelemetry-semconv:${otelVersion}-alpha"
-  runtimeOnly    "co.elastic.apm:elastic-apm-agent:1.36.0"
+  implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
+
+  runtimeOnly    "co.elastic.apm:elastic-apm-agent:1.42.1-SNAPSHOT"
 }
 
 tasks.named("dependencyLicenses").configure {
